[gd_scene load_steps=9 format=3 uid="uid://cl6ujwlw4p48c"]

[ext_resource type="Script" path="res://scenes/ui/sound_settings.gd" id="1_4hgl3"]
[ext_resource type="Theme" uid="uid://cvcuf7q8qqwyk" path="res://assets/graphic/ui/ui.tres" id="1_ui4nb"]
[ext_resource type="Texture2D" uid="uid://brgwvryii6o7n" path="res://assets/graphic/ui/Music.png" id="3_45xr1"]
[ext_resource type="Texture2D" uid="uid://b7rd4t1u0uu3n" path="res://assets/graphic/ui/Sound.png" id="4_0pqqf"]
[ext_resource type="AudioStream" uid="uid://dlc01i01qm3s2" path="res://assets/audio/sfx/click.wav" id="5_o342l"]
[ext_resource type="AudioStream" uid="uid://ddcp8a8ak5m7s" path="res://assets/audio/sfx/talking_effect_dark.wav" id="6_t32xi"]
[ext_resource type="AudioStream" uid="uid://dxqr8dl8aypt2" path="res://assets/audio/music/plant_boss.wav" id="7_pmlsx"]
[ext_resource type="AudioStream" uid="uid://cm3l52nktgnom" path="res://assets/audio/sfx/talking_effect_light.wav" id="8_oukrl"]

[node name="SoundSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ui4nb")
script = ExtResource("1_4hgl3")

[node name="SoundContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.374
anchor_bottom = 0.635
offset_right = 93.92
offset_bottom = 32.2
scale = Vector2(0.7, 0.7)

[node name="MasterHBox" type="HBoxContainer" parent="SoundContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Spacer_1" type="Control" parent="SoundContainer/MasterHBox"]
custom_minimum_size = Vector2(122.075, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.35

[node name="MasterVBox" type="VBoxContainer" parent="SoundContainer/MasterHBox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="MasterLabel" type="Label" parent="SoundContainer/MasterHBox/MasterVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Master"

[node name="MasterHSlider" type="HSlider" parent="SoundContainer/MasterHBox/MasterVBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0

[node name="Spacer_2" type="Control" parent="SoundContainer/MasterHBox"]
custom_minimum_size = Vector2(122.075, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.35

[node name="MusicContainer" type="VBoxContainer" parent="SoundContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MasterLabel" type="Label" parent="SoundContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Music"

[node name="MusicHBox" type="HBoxContainer" parent="SoundContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MusicButton" type="TextureButton" parent="SoundContainer/MusicContainer/MusicHBox"]
layout_mode = 2
texture_normal = ExtResource("3_45xr1")
stretch_mode = 3

[node name="MusicHSlider" type="HSlider" parent="SoundContainer/MusicContainer/MusicHBox"]
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0

[node name="SFXContainer" type="VBoxContainer" parent="SoundContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="SFXLabel3" type="Label" parent="SoundContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "SFX"

[node name="SFXHBox" type="HBoxContainer" parent="SoundContainer/SFXContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SFXButton" type="TextureButton" parent="SoundContainer/SFXContainer/SFXHBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_0pqqf")
stretch_mode = 5

[node name="SFXHSlider" type="HSlider" parent="SoundContainer/SFXContainer/SFXHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o342l")
bus = &"SFX"

[node name="CheckMaster" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t32xi")

[node name="CheckMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pmlsx")
volume_db = -10.0
bus = &"Music"

[node name="CheckSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_oukrl")
bus = &"SFX"
